<resources>
    <string name="app_name">CryptoApp</string>
    <string name="text_last_update_title">last update :  </string>
    <string name="seperator_text">/</string>
    <string name="price_text">Price</string>
    <string name="at_least_one_day">at least one day</string>
    <string name="the_high_for_the_day">the high for the day</string>
    <string name="update">Update</string>
    <string name="the_last_deal">the last deal</string>
    <string name="error_message_text">Ann error occurred</string>
    <string name="count_coins">Count coins</string>
    <string name="text_count_coins">How many cryptocurrencies to show</string>
    <string name="cancel_button">Cancel</string>
    <string name="ok_button">OK</string>
    <string name="input_number">Input number:</string>
</resources>